
option java_outer_classname="ConfigModifiedEventResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message ConfigModifiedEventResponse 
{
	optional string hotConfig = 1;
}